# telegram-bot

./: .gitmodules  CMakeLists.txt  README.md  bot_shell.sh  config.json
src/: main.cpp  sockcontrol.cpp
src/AppBot/: Bot.cpp  Bot.h
src/AppCallbacks/: CleanUpTo.h  KnownUsers.h  LastBuild.h  RandomProblem.h  SaveIt.h  Summon.h  Triggered.h  _IncludeAll.h
src/AppConfig/: Config.cpp  Config.h
src/AppDatabase/: Database.cpp  Database.h  Escape.cpp  Result.cpp
src/AppEvent/: Event.cpp  Event.h
src/AppExceptions/: Exceptions.h
src/AppExceptions/Exceptions/: DatabaseUnsetError.cpp  Exception.cpp  IdentifierError.cpp  NotImplementedError.cpp  PostgresError.cpp  UndefinedVariableError.cpp
src/AppGroup/: Group.cpp  Group.h
src/AppHandlersEngine/: AbstractCallback.cpp  Handler.cpp  HandlersEngine.h  Matcher.cpp
src/AppLogger/: Logger.h
src/AppMessages/: AbstractMessage.cpp  Messages.h
src/AppMessages/Message/: Forward.cpp  ForwardParameters.cpp  Parameters.cpp  Sticker.cpp  Text.cpp
src/AppUser/: User.cpp  User.h
